fix nav height on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -150,7 +150,7 @@ footer.page-footer p {
   }
 
   header {
-    height: 10vh;
+    height: auto;
   }
 
   #commitment .commitment-step {
